@@ -1,11 +1,11 @@
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         DBD-mysql
-version:      3.0001_0
+version:      3.0001_1
 version_from: lib/DBD/mysql.pm
 installdirs:  site
 requires:
-    Data::Dumper:                  0
     DBI:                           1.08
+    Data::Dumper:                  0
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.12
